added simple solution to dark mode

--- a/src/components/layout/globalStyle.css
+++ b/src/components/layout/globalStyle.css
@@ -7,3 +7,16 @@
 body {
   background-color: rgb(247, 247, 247);
 }
+
+@media screen and (prefers-color-scheme: light) {
+  .header-dark {
+    color: white;
+  }
+
+  .hello-dark {
+    color: grey;
+  }
+  .icon-dark {
+    color: grey;
+  }
+}
