--- a/src/components/layout/globalStyle.css
+++ b/src/components/layout/globalStyle.css
@@ -8,7 +8,7 @@ body {
   background-color: rgb(247, 247, 247);
 }
 
-@media screen and (prefers-color-scheme: light) {
+@media screen and (prefers-color-scheme: dark) {
   .header-dark {
     color: white;
   }
@@ -18,5 +18,18 @@ body {
   }
   .icon-dark {
     color: grey;
+  }
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  .header-dark {
+    color: black;
+  }
+
+  .hello-dark {
+    color: black;
+  }
+  .icon-dark {
+    color: black;
   }
 }
